--- a/Speart/src/vista/DialogLogin.form
+++ b/Speart/src/vista/DialogLogin.form
@@ -13,7 +13,7 @@
     <Property name="undecorated" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
-    <SyntheticProperty name="formSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-33,0,0,2,67"/>
+    <SyntheticProperty name="formSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-30,0,0,2,123"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="0"/>
     <SyntheticProperty name="generateSize" type="boolean" value="true"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
@@ -66,7 +66,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="110" y="180" width="90" height="30"/>
+          <AbsoluteConstraints x="130" y="180" width="90" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -82,7 +82,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="20" y="180" width="90" height="30"/>
+          <AbsoluteConstraints x="40" y="180" width="90" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -141,11 +141,11 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="&lt;html&gt;NUNCA: entregue sus datos personales,&lt;br&gt;usuario, clave de acceso&lt;br&gt; por cualquier medio ya sea correo &lt;br&gt;electronico, mensajes de celular, &lt;br&gt;mensajeria instantanea, tel&#xe9;fono, pagina web u otro,&lt;br&gt; el usuario y las claves son secretas&gt;"/>
+        <Property name="text" type="java.lang.String" value="&lt;html&gt;NUNCA: entregue sus datos personales,&lt;br&gt;usuario, clave de acceso&lt;br&gt;&#xa;por cualquier medio ya sea correo &lt;br&gt;elefctronico, mensajes de celular, &lt;br&gt;mensajeria instanatnea,&#xa;teelefono, pagina web u otro,&lt;br&gt; el usuario y las claves son secretas&gt;"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="310" y="100" width="270" height="120"/>
+          <AbsoluteConstraints x="390" y="100" width="240" height="100"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -161,7 +161,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Berlin Sans FB" size="12" style="0"/>
@@ -169,11 +169,11 @@
         <Property name="text" type="java.lang.String" value="Resetear clave"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="200" y="180" width="110" height="30"/>
+          <AbsoluteConstraints x="220" y="180" width="110" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
