--- a/Speart/src/controlador/reportes/reporteval.jrxml
+++ b/Speart/src/controlador/reportes/reporteval.jrxml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="reporteval" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="751ded63-aa3b-4c11-8da7-99cccce54615">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="121"/>
-	<property name="ireport.y" value="0"/>
-	<field name="igp" class="java.lang.String"/>
-	<field name="conoc" class="java.lang.String"/>
-	<field name="cct" class="java.lang.String"/>
-	<field name="ccu" class="java.lang.String"/>
-	<field name="til" class="java.lang.String"/>
-	<field name="evalciud" class="java.lang.String"/>
-	<field name="totalEval" class="java.lang.String"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="120"/>
+	<parameter name="igp" class="java.lang.String"/>
+	<parameter name="conoc" class="java.lang.String"/>
+	<parameter name="cotec" class="java.lang.String"/>
+	<parameter name="couniv" class="java.lang.String"/>
+	<parameter name="trab" class="java.lang.String"/>
+	<parameter name="qu" class="java.lang.String"/>
+	<parameter name="total" class="java.lang.String"/>
+	<parameter name="fe" class="java.lang.String"/>
+	<parameter name="fecha" class="java.lang.String"/>
+	<parameter name="efecto" class="java.lang.String"/>
+	<parameter name="desem" class="java.lang.String"/>
+	<queryString>
+		<![CDATA[SELECT
+     evaluacion.`idEvaluacion` AS evaluacion_idEvaluacion,
+     evaluacion.`cct` AS evaluacion_cct,
+     evaluacion.`ccu` AS evaluacion_ccu,
+     evaluacion.`conoc` AS evaluacion_conoc,
+     evaluacion.`evalciud` AS evaluacion_evalciud,
+     evaluacion.`fechaEvaluacion` AS evaluacion_fechaEvaluacion,
+     evaluacion.`igp` AS evaluacion_igp,
+     evaluacion.`til` AS evaluacion_til,
+     evaluacion.`totalEval` AS evaluacion_totalEval,
+     evaluacion.`usuarioEval_idpersona` AS evaluacion_usuarioEval_idpersona
+FROM
+     `evaluacion` evaluacion]]>
+	</queryString>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -111,81 +130,101 @@
 				<text><![CDATA[Evaluación del ciudadano (-)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="5b40149b-b174-4811-ac53-a6ca24558736" x="6" y="114" width="740" height="19"/>
+				<reportElement uuid="5b40149b-b174-4811-ac53-a6ca24558736" x="6" y="132" width="740" height="19"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Berlin Sans FB" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[		TOTAL EVALUACIÓN DEL DESEMPEÑO:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="6e6c0644-7d6d-4458-9870-4b4154fce551" x="6" y="133" width="740" height="19"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<reportElement uuid="6e6c0644-7d6d-4458-9870-4b4154fce551" x="6" y="151" width="740" height="19"/>
+				<textElement verticalAlignment="Middle">
 					<font fontName="Berlin Sans FB" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[		DESEMPEÑO:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="e620f2e1-6c4d-46bd-9561-2dc1ff49d642" x="6" y="152" width="740" height="19"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<reportElement uuid="e620f2e1-6c4d-46bd-9561-2dc1ff49d642" x="6" y="170" width="740" height="19"/>
+				<textElement verticalAlignment="Middle">
 					<font fontName="Berlin Sans FB" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[		EFECTO:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="eb676b73-9a9d-4384-ba05-de2648ad0065" x="6" y="171" width="740" height="19"/>
+				<reportElement uuid="eb676b73-9a9d-4384-ba05-de2648ad0065" x="6" y="189" width="740" height="19"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Berlin Sans FB" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[		FUNCIONARIO EVALUADOR:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="c1bd2c6b-8611-47ad-a3e6-4d3d8d5c7494" x="6" y="190" width="158" height="19"/>
+				<reportElement uuid="c1bd2c6b-8611-47ad-a3e6-4d3d8d5c7494" x="6" y="208" width="158" height="19"/>
 				<textElement>
 					<font fontName="Berlin Sans FB" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Fecha (dd/mm/aaaa):]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="e1dc5f43-efd3-4606-95e5-51f88c422eaa" x="6" y="209" width="740" height="19"/>
+				<reportElement uuid="e1dc5f43-efd3-4606-95e5-51f88c422eaa" x="6" y="227" width="740" height="19"/>
 				<textElement>
 					<font fontName="Berlin Sans FB" size="14" isBold="false"/>
 				</textElement>
 				<text><![CDATA[CERTIFICO: Que he evaluado al (a la) servidor (a) acorde al procedimiento de la norma de Evaluación de Desempeño.]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="de7b2ff2-b611-4984-85d1-79ab026fee95" x="420" y="0" width="100" height="20"/>
+				<reportElement uuid="7cb6a46a-1fdc-4b9b-b882-a97d451f94c8" x="425" y="0" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{igp}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{igp}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="472fcab1-f878-47b8-97ff-88822e14142c" x="420" y="20" width="100" height="20"/>
+				<reportElement uuid="aa336be3-a09c-4a1d-a00c-5fee79c59a1e" x="425" y="20" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{conoc}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{conoc}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="ed96c27f-5877-4d76-b15d-99d1d8f99bf3" x="420" y="40" width="100" height="20"/>
+				<reportElement uuid="d19cb66d-107b-49af-8eef-1a11d985ce44" x="425" y="40" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{cct}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{cotec}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="53fefebf-cf47-43a3-b98f-8cecac825592" x="420" y="60" width="100" height="20"/>
+				<reportElement uuid="d3b81239-7ae2-44af-a118-8c8e2aab8da9" x="425" y="60" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{ccu}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{couniv}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="bf5928f6-317a-4e53-8c53-7d7f333e01df" x="420" y="80" width="100" height="20"/>
+				<reportElement uuid="cf6a84af-74e8-40d6-b96f-523c3c5b60e2" x="425" y="80" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{til}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{trab}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="7b0712da-5647-492d-9e19-f62cd8323103" x="420" y="100" width="100" height="20"/>
+				<reportElement uuid="b7f6015c-70ff-4361-9550-a23c789dcf44" x="425" y="100" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{evalciud}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{qu}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="cc1884ce-fbe3-4212-b73d-a214463bd737" x="551" y="114" width="100" height="20"/>
+				<reportElement uuid="e20fc7ac-4ef4-437a-93db-27cea7d53ea9" x="560" y="132" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{totalEval}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{total}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="3a1b678a-5225-4cb7-8efa-80d32d204a00" x="525" y="188" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$P{fe}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="02e49e7f-0387-4841-b7bc-33c99e991306" x="164" y="208" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$P{fecha}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="c512b948-df28-4516-9b28-56a9d5d0a368" x="145" y="169" width="601" height="20"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$P{efecto}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="bf2a60f4-5960-45ae-924e-d6d0dc3f6e2a" x="181" y="152" width="565" height="20"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$P{desem}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
