--- a/Speart/src/vista/DialogLogin.form
+++ b/Speart/src/vista/DialogLogin.form
@@ -166,7 +166,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Berlin Sans FB" size="12" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Resetear clave"/>
+        <Property name="text" type="java.lang.String" value="&lt;html&gt;Olvido su &lt;br&gt;contrase&#xf1;a&lt;/html&gt;"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
