--- a/Speart/src/vista/paneles/usuario/PnlUsuario.form
+++ b/Speart/src/vista/paneles/usuario/PnlUsuario.form
@@ -11,7 +11,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,118,0,0,3,-11"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-123,0,0,3,-4"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -57,7 +57,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="720" y="20" width="280" height="340"/>
+                  <AbsoluteConstraints x="730" y="110" width="280" height="340"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -70,7 +70,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="100" y="10" width="660" height="590"/>
+                  <AbsoluteConstraints x="100" y="20" width="770" height="590"/>
                 </Constraint>
               </Constraints>
 
@@ -123,7 +123,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="10" y="360" width="650" height="-1"/>
+                      <AbsoluteConstraints x="10" y="360" width="710" height="-1"/>
                     </Constraint>
                   </Constraints>
 
@@ -184,6 +184,9 @@
                       <Properties>
                         <Property name="toolTipText" type="java.lang.String" value="Ingrese nuevamente la confirmaic&#xf3;n de su clave"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="txtConfirmCaretUpdate"/>
+                      </Events>
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                           <AbsoluteConstraints x="90" y="110" width="170" height="30"/>
@@ -195,8 +198,7 @@
                         <Property name="toolTipText" type="java.lang.String" value="Ingrese la clave que usuara para iniciar sesi&#xf3;n"/>
                       </Properties>
                       <Events>
-                        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtClaveKeyPressed"/>
-                        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtClaveKeyTyped"/>
+                        <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="txtClaveCaretUpdate"/>
                       </Events>
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -225,9 +227,12 @@
                           </StringArray>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbPreguntaseguridadActionPerformed"/>
+                      </Events>
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                          <AbsoluteConstraints x="450" y="80" width="180" height="-1"/>
+                          <AbsoluteConstraints x="450" y="80" width="240" height="-1"/>
                         </Constraint>
                       </Constraints>
                     </Component>
@@ -247,7 +252,7 @@
                     <Component class="javax.swing.JTextField" name="txtRespuestapregunta">
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                          <AbsoluteConstraints x="450" y="110" width="180" height="-1"/>
+                          <AbsoluteConstraints x="450" y="100" width="240" height="30"/>
                         </Constraint>
                       </Constraints>
                     </Component>
@@ -283,7 +288,7 @@
                     <Component class="javax.swing.JTextField" name="txtEmail">
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                          <AbsoluteConstraints x="450" y="50" width="180" height="-1"/>
+                          <AbsoluteConstraints x="450" y="50" width="240" height="30"/>
                         </Constraint>
                       </Constraints>
                     </Component>
@@ -311,7 +316,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="50" y="180" width="530" height="-1"/>
+                      <AbsoluteConstraints x="60" y="180" width="-1" height="-1"/>
                     </Constraint>
                   </Constraints>
 
@@ -354,7 +359,7 @@
                       </Properties>
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                          <AbsoluteConstraints x="20" y="40" width="80" height="30"/>
+                          <AbsoluteConstraints x="30" y="40" width="80" height="30"/>
                         </Constraint>
                       </Constraints>
                     </Component>
@@ -452,8 +457,8 @@
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                           <StringArray count="4">
                             <StringItem index="0" value="Seleccione una opci&#xf3;n"/>
-                            <StringItem index="1" value="Servidor"/>
-                            <StringItem index="2" value="Jefe"/>
+                            <StringItem index="1" value="Jefe"/>
+                            <StringItem index="2" value="Servidor"/>
                             <StringItem index="3" value="Jefe RRHH"/>
                           </StringArray>
                         </Property>
